--- a/inhalake_app/android/app/src/main/AndroidManifest.xml
+++ b/inhalake_app/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.inhalake_app">
+    package="com.example.weather">
    <application
-        android:label="inhalake_app"
+        android:label="weather"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
