--- a/inhalake_app/pubspec.yaml
+++ b/inhalake_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.17.0
   weather_icons: ^3.0.0
   syncfusion_flutter_gauges: ^20.4.54
+  simple_circular_progress_bar: ^1.0.2
 
 dev_dependencies:
   flutter_test:
