--- a/inhalake_app/pubspec.yaml
+++ b/inhalake_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^2.8.0
   firebase_auth: ^4.3.0
   google_fonts: ^4.0.3
+  flutter_launcher_icons: ^0.12.0
 
 dev_dependencies:
   flutter_test:
