--- a/inhalake_app/pubspec.yaml
+++ b/inhalake_app/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_core: ^2.8.0
   firebase_auth: ^4.3.0
   google_fonts: ^4.0.3
+  video_player: ^2.6.0
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
